--- a/sfda/pom.xml
+++ b/sfda/pom.xml
@@ -98,6 +98,11 @@
 		    <artifactId>javase</artifactId>
 		    <version>3.4.1</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		    <version>3.11</version>
+		</dependency>
 	</dependencies>
 
 	<build>
