--- a/sfda/pom.xml
+++ b/sfda/pom.xml
@@ -115,6 +115,11 @@
 		    <version>2.4.7</version>
 		    <scope>test</scope>
 		</dependency>
+		<dependency>
+		  <groupId>joda-time</groupId>
+		  <artifactId>joda-time</artifactId>
+		  <version>2.10.8</version>
+		</dependency>
 	</dependencies>
 
 	<build>
