--- a/sfda/pom.xml
+++ b/sfda/pom.xml
@@ -82,7 +82,6 @@
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
-			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -106,7 +105,6 @@
 		    <groupId>org.spockframework</groupId>
 		    <artifactId>spock-core</artifactId>
 		    <version>1.3-groovy-2.4</version>
-		    <scope>test</scope>
 		</dependency>
 		<dependency>
 		    <groupId>org.codehaus.groovy</groupId>
@@ -116,6 +114,14 @@
 		<dependency>
 		  <groupId>joda-time</groupId>
 		  <artifactId>joda-time</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-test</artifactId>
+		</dependency>
+		<dependency>
+		   <groupId>org.springframework.boot</groupId>
+		   <artifactId>spring-boot</artifactId>
 		</dependency>
 	</dependencies>
 
